gitops-archive/manifests/cupdate/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cupdate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cupdate
  namespace: cupdate
  labels:
    app: cupdate
spec:
  replicas: 0
  selector:
    matchLabels:
      app: cupdate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cupdate
        app.kubernetes.io/name: cupdate
    spec:
      serviceAccountName: cupdate
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 120
      securityContext:
        runAsNonRoot: true
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: cupdate
          image: ghcr.io/alexgustafsson/cupdate:0.24.7
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: data
              mountPath: /var/run/data
            - name: tmp
              mountPath: /tmp
          ports:
            - name: web
              containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
      volumes:
        - name: "tmp"
          emptyDir: {}
        - name: "data"
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cupdate
  namespace: cupdate
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: cupdate
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cupdate-ingress
  namespace: cupdate
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cupdate.local.timmybtech.com`)
      kind: Rule
      services:
        - name: cupdate
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
